syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TrainTicketProto";

service TrainTicketService {
  rpc PurchaseTicket (TicketRequest) returns (TicketReceipt);
  rpc GetReceiptDetails (ReceiptDetailsRequest) returns (TicketReceipt);
  rpc ViewUserSeats (ViewUserSeatsRequest) returns (UserSeatsList);
  rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse);
  rpc ModifyUserSeat (ModifyUserSeatRequest) returns (TicketReceipt);
}

message TicketRequest {
  string from = 1;
  string to = 2;
  string user_first_name = 3;
  string user_last_name = 4;
  string user_email = 5;
}

message ReceiptDetailsRequest {
  string user_email = 1;
}

message ViewUserSeatsRequest {
  string section = 1;
}

message UserSeats {
  string user_email = 1;
  string section = 2;
  string seat = 3;
}

message UserSeatsList {
  repeated UserSeats seats = 1;
}

message RemoveUserRequest {
  string user_email = 1;
}

message RemoveUserResponse {
  bool success = 1;
}

message ModifyUserSeatRequest {
  string user_email = 1;
  string new_seat = 2;
}

message TicketReceipt {
  string from = 1;
  string to = 2;
  string user_first_name = 3;
  string user_last_name = 4;
  string user_email = 5;
  string section = 6;
  string seat = 7;
  float price_paid = 8;
}
